Add host-generated sandstorm-files.list to .gitignore
We'll build the final packages with vagrant, to make reproduction
easier.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 *.sqlite3
 *.min.js
 *.swp
+
+# We want to keep the file list generated in vagrant, but the host-local one
+# is likely to vary heavily from one machine to another:
+/sandstorm-files.list
